# diesel_demo

./: .env  Cargo.toml  README.md  ckb.txt
migrations/2021-11-14-055112_create_blog/: up.sql
src/: lib.rs  models.rs  schema.rs
src/models/: animal.rs  mod.rs  post.rs  user.rs
