[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "extras", "r2d2", "with-deprecated"] }
dotenv = "0.15.0"
postgres = "0.19.2"
